--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,4 +1,6 @@
-Flask==2.2.2
+Flask>=2.2.5
 gunicorn==20.1.0
-python-dotenv==0.21.0
+python-dotenv>=1.0.1
 Werkzeug==2.3.8
+black==25.1.0
+boto3==1.35.53
